--- a/src/Client/GUI3/Pieces/CMakeLists.txt
+++ b/src/Client/GUI3/Pieces/CMakeLists.txt
@@ -1,5 +1,4 @@
-set(SOURCES ${SOURCES} 
+target_sources(gui3 PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/Button.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Image.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp"
-	PARENT_SCOPE)
+	"${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp")
