--- a/src/Client/GUI3/Rendering/CMakeLists.txt
+++ b/src/Client/GUI3/Rendering/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Primitives")
 
-set(SOURCES ${SOURCES} 
-	"${CMAKE_CURRENT_SOURCE_DIR}/Style.cpp"	
-	PARENT_SCOPE)
+target_sources(gui3 PRIVATE
+	"${CMAKE_CURRENT_SOURCE_DIR}/Style.cpp"	)
