--- a/src/Client/GUI3/Widgets/CMakeLists.txt
+++ b/src/Client/GUI3/Widgets/CMakeLists.txt
@@ -3,6 +3,5 @@ add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Graphics")
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Misc")
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Panels")
 
-set(SOURCES ${SOURCES} 
-	"${CMAKE_CURRENT_SOURCE_DIR}/TestWidget.cpp"
-	PARENT_SCOPE)
+target_sources(gui3 PRIVATE
+	"${CMAKE_CURRENT_SOURCE_DIR}/TestWidget.cpp")
