--- a/src/Client/GUI3/Widgets/Graphics/CMakeLists.txt
+++ b/src/Client/GUI3/Widgets/Graphics/CMakeLists.txt
@@ -1,3 +1,2 @@
-set(SOURCES ${SOURCES} 
-	"${CMAKE_CURRENT_SOURCE_DIR}/Gradient.cpp"
-	PARENT_SCOPE)
+target_sources(gui3 PRIVATE
+	"${CMAKE_CURRENT_SOURCE_DIR}/Gradient.cpp")
