--- a/src/Client/GUI3/Widgets/Panels/CMakeLists.txt
+++ b/src/Client/GUI3/Widgets/Panels/CMakeLists.txt
@@ -1,6 +1,5 @@
-set(SOURCES ${SOURCES} 
+target_sources(gui3 PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/FillPanel.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Panel.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/SettingsPanel.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/SplitPanel.cpp"
-	PARENT_SCOPE)
+	"${CMAKE_CURRENT_SOURCE_DIR}/SplitPanel.cpp")
