--- a/src/Shared/Config/CMakeLists.txt
+++ b/src/Shared/Config/CMakeLists.txt
@@ -1,8 +1,7 @@
-set(SOURCES ${SOURCES} 
-	"${CMAKE_CURRENT_SOURCE_DIR}/ConfigAggregator.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/Config.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/ConfigSource.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/JSONConfig.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/NullConfig.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/Paths.cpp"
-	PARENT_SCOPE)
+add_library(config 
+	"ConfigAggregator.cpp"
+	"Config.cpp"
+	"ConfigSource.cpp"
+	"JSONConfig.cpp"
+	"NullConfig.cpp"
+	"Paths.cpp")
