--- a/src/Shared/Utils/Debug/CMakeLists.txt
+++ b/src/Shared/Utils/Debug/CMakeLists.txt
@@ -1,5 +1,4 @@
-set(SOURCES ${SOURCES} 
+target_sources(utils PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/CrashHandler.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/StackTrace.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/TypeInfo.cpp"
-	PARENT_SCOPE)
+	"${CMAKE_CURRENT_SOURCE_DIR}/TypeInfo.cpp")
