--- a/src/Shared/Utils/Filesystem/CMakeLists.txt
+++ b/src/Shared/Utils/Filesystem/CMakeLists.txt
@@ -1,4 +1,3 @@
-set(SOURCES ${SOURCES} 
+target_sources(utils PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/DirectoryObserver.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/FileObserver.cpp"
-	PARENT_SCOPE)
+	"${CMAKE_CURRENT_SOURCE_DIR}/FileObserver.cpp")
