--- a/src/Client/GUI3/Rendering/Primitives/CMakeLists.txt
+++ b/src/Client/GUI3/Rendering/Primitives/CMakeLists.txt
@@ -1,6 +1,5 @@
-set(SOURCES ${SOURCES} 
+target_sources(gui3 PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/Box.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Gradient.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Outline.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/TintedBox.cpp"
-	PARENT_SCOPE)
+	"${CMAKE_CURRENT_SOURCE_DIR}/TintedBox.cpp")
