--- a/src/Client/GUI3/Utils/CMakeLists.txt
+++ b/src/Client/GUI3/Utils/CMakeLists.txt
@@ -1,6 +1,5 @@
-set(SOURCES ${SOURCES} 
+target_sources(gui3 PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/Canvas.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/MouseMonitor.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/NullResourceManager.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/VertexBuffer.cpp"
-	PARENT_SCOPE)
+	"${CMAKE_CURRENT_SOURCE_DIR}/VertexBuffer.cpp")
