--- a/src/Client/GUI3/Widgets/Misc/CMakeLists.txt
+++ b/src/Client/GUI3/Widgets/Misc/CMakeLists.txt
@@ -1,4 +1,3 @@
-set(SOURCES ${SOURCES} 
+target_sources(gui3 PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/MouseCursor.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/Window.cpp"
-	PARENT_SCOPE)
+	"${CMAKE_CURRENT_SOURCE_DIR}/Window.cpp")
