Move MainClient.cpp to src/Client/RankCheck
This file was the lone source file in Client and this will make moving
the executable out of the top-level CMakeLists easier.

--- a/src/Client/RankCheck/CMakeLists.txt
+++ b/src/Client/RankCheck/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES ${SOURCES}
 	"${CMAKE_CURRENT_SOURCE_DIR}/GameLogReader.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/LeagueReader.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/LogReader.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/MainClient.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/NautsNames.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/NetworkLogReader.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/NetworkLogStartupReader.cpp"
