--- a/src/Client/CMakeLists.txt
+++ b/src/Client/CMakeLists.txt
@@ -3,6 +3,4 @@ add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/GUI3")
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/RankCheck")
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/System")
 
-set(SOURCES ${SOURCES} 
-	"${CMAKE_CURRENT_SOURCE_DIR}/MainClient.cpp"
-	PARENT_SCOPE)
+set(SOURCES ${SOURCES} PARENT_SCOPE)
