Switch to submodule TinyFileDialogs
This has one c file to compile, but it doesn't appear like any distro
packages it, so just create a library and move on.

--- a/src/Shared/External/CMakeLists.txt
+++ b/src/Shared/External/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(SOURCES ${SOURCES} 
+set(SOURCES ${SOURCES}
 	"${CMAKE_CURRENT_SOURCE_DIR}/PugiXML/pugixml.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/TinyFileDialogs/tinyfiledialogs.c"
 	PARENT_SCOPE)
+
+add_library(tinyfiledialogs "tinyfiledialogs/tinyfiledialogs.c")
