--- a/src/Shared/Utils/CMakeLists.txt
+++ b/src/Shared/Utils/CMakeLists.txt
@@ -12,5 +12,7 @@ add_library(utils
 	"Utilities.cpp"
 	"Zlib.cpp")
 
+target_link_libraries(utils tinyfiledialogs)
+
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Debug")
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Filesystem")
