Switched to using submodule or system version of RapidJSON
RapidJSON is a package in some linux distributions, so we should use the
system version when it is installed and the version from git otherwise.
To do this, we create an INTERFACE target which sets the appropriate
include directories when it is included. Add it as a target wherever the
header files are needed (RankCheck, system, and config at the moment)

--- a/src/Client/System/CMakeLists.txt
+++ b/src/Client/System/CMakeLists.txt
@@ -5,4 +5,4 @@ add_library(system
 	"WOSRenderer.cpp"
 	"WOSResourceManager.cpp")
 
-target_link_libraries(system graphics gui3)
+target_link_libraries(system graphics gui3 rapidjson)
