Remove unnecessary prefixing in add_directories

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Client")
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Shared")
+add_subdirectory("Client")
+add_subdirectory("Shared")
 
 set(SOURCES ${SOURCES} PARENT_SCOPE)
