--- a/src/Client/GUI3/Widgets/CMakeLists.txt
+++ b/src/Client/GUI3/Widgets/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Controls")
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Graphics")
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Misc")
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Panels")
+add_subdirectory("Controls")
+add_subdirectory("Graphics")
+add_subdirectory("Misc")
+add_subdirectory("Panels")
 
 target_sources(gui3 PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/TestWidget.cpp")
