--- a/src/Shared/CMakeLists.txt
+++ b/src/Shared/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Config")
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Content")
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/External")
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Utils")
+add_subdirectory("Config")
+add_subdirectory("Content")
+add_subdirectory("External")
+add_subdirectory("Utils")
 
 set(SOURCES ${SOURCES} PARENT_SCOPE)
