Correctly build bundled pugixml when cross-compiling
Previously, we would build pugixml targeting the host system, which
would cause the build to fail because of the different in file
formats/architectures.

--- a/src/Shared/External/CMakeLists.txt
+++ b/src/Shared/External/CMakeLists.txt
@@ -32,6 +32,15 @@ if(NOT pugixml_FOUND)
 	include(ExternalProject)
 	ExternalProject_Add(project_pugixml
 		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/pugixml"
+		CMAKE_ARGS
+		"-G${CMAKE_GENERATOR}"
+		"-DCMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES=${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES}"
+		"-DCMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES=${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES}"
+		"-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
+		"-DCMAKE_CROSSCOMPILING_EMULATOR=${CMAKE_CROSSCOMPILING_EMULATOR}"
+		"-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
+		"-DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}"
+		"-DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS}"
 		INSTALL_COMMAND "")
 	ExternalProject_Get_Property(project_pugixml BINARY_DIR)
 	
